--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "installall": "(npm install) && (cd app && npm install)",
     "start": "electron app",
-    "win32": "electron-packager ./app its-master --platform win32 --arch ia32 --out dist/ --icon=./build/favicon.ico --overwrite --download.mirror https://npm.taobao.org/mirrors/electron/ --asar",
-    "win64": "electron-packager ./app its-master --platform win32 --arch x64 --out dist/ --icon=./build/favicon.ico --overwrite --download.mirror https://npm.taobao.org/mirrors/electron/ --asar",
-    "mac": "electron-packager ./app its-master --platform darwin --arch x64 --out dist/ --icon=./build/favicon.icns --overwrite --download.mirror https://npm.taobao.org/mirrors/electron/ --asar",
+    "win32": "gulp build32",
+    "win64": "gulp build64",
+    "mac": "electron-packager ./app client --platform darwin --arch x64 --out dist/ --icon ./build/favicon.icns --overwrite --download.mirror https://npm.taobao.org/mirrors/electron/ --asar",
     "update": "ncu -u -a"
   },
   "devDependencies": {
     "electron": "^1.6.1",
-    "electron-packager": "^8.5.2"
+    "electron-packager": "^8.5.2",
+    "gulp": "^3.9.1",
+    "gulp-inno": "^0.1.0"
   }
 }
