--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-packager": "^8.6.0",
     "gulp": "^3.9.1",
     "gulp-inno": "^0.1.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4"
   }
 }
